@@ -11,6 +11,8 @@ lintian-brush (0.39) UNRELEASED; urgency=medium
   * Don't remove Built-Using variables that are unrelated to go.
   * Support more complex alioth URLs.
   * Support updating non-trivial debhelper dependencies.
+  * init.d-script-needs-depends-on-lsb-base: don't add lsb-base
+    dependency if one already exists.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 23 Oct 2019 02:13:20 +0000
 
